# framework

./: .editorconfig  .gitignore  :memory  LICENSE  NOTES.md  README.md  mkdocs.yml  pyproject-old.toml  pyproject.toml  serve-app1  uvicore-app1-cli
distxxx/: uvicore-0.1.0-py3-none-any.whl
docs/: auto-api.md  bootstrap.md  cache.md  cli-entrypoints.md  cli.md  configuration.md  controllers.md  db-config.md  db-queries.md  db-tables.md  deployment.md  directory-structure.md  events.md  exceptions.md  index.md  installation.md  ioc.md  mail.md  mkdocs-help.md  orm-basics.md  orm-model.md  orm-pydantic.md  orm-querybuilder.md  release-notes.md  request-lifecycle.md  routing.md  service-providers.md  style.css  superdict.md  todo.md  views.md
html/uvicore/: configuration.html  index.html
html/uvicore/contracts/: application.html  config.html  index.html  ioc.html  package.html  provider.html  router.html  server.html  template.html
html/uvicore/database/: OLD-__init__.html  connection.html  db.html  idea__init__.html  index.html
html/uvicore/foundation/: application.html  cli.html  index.html  ioc.html  package.html  providers.html
html/uvicore/http/: index.html  request.html  response.html  router.html  server.html  static.html  templates.html
html/uvicore/support/: click.html  collection.html  dictionary.html  dumper.html  index.html  module.html  path.html  provider.html
tests/: conftest.py  seeders.py  test_database.py  test_events.py  test_orm.py  test_uvicore.py
tests/apps/app1/: notebook.ipynb  serve-gunicorn  serve-uvicorn  shell  uvicore  uvicore.py
tests/test_api/: test_delete.py  test_get.py  test_post.py  test_put.py  test_something.py
tests/test_database/: README.md  test_builder.py  test_encode.py  test_hybrid.py  test_poly_many_to_many.py  test_poly_one_to_many.py  test_poly_one_to_one.py  test_where_equal.py  test_where_in.py  test_where_like.py  test_where_not_equal.py  test_where_not_in.py  test_where_not_like.py  test_where_null.py
tests/test_db/: test_other.py
tests/test_db/test_builder/: test_cache.py  test_delete.py  test_exceptions.py  test_find.py  test_groupby.py  test_join.py  test_limit.py  test_orderby.py  test_outerjoin.py  test_select.py  test_update.py  test_where_equal.py  test_where_in.py  test_where_like.py  test_where_not_equal.py  test_where_not_in.py  test_where_not_like.py  test_where_not_null.py  test_where_null.py
tests/test_db/test_hybrid/: README.md  test_aggregates.py  test_groupby.py  test_join.py  test_orderby.py  test_where_equal.py  test_where_in.py  test_where_not_equal.py  test_where_or.py
tests/test_db/test_orm/: test_delete.py  test_poly_one_to_many.py  test_rel_many_to_many.py  test_rel_one_to_many.py  test_rel_one_to_one.py  test_update.py  test_where_in.py  test_where_not_equal.py  test_where_not_in.py  test_where_not_like.py
tests/test_db/test_raw/: test_select.py
tests/test_db/test_sa/: test_groupby.py  test_join.py  test_orderby.py  test_select.py  test_where_equal.py  test_where_not_equal.py
tests/test_db_builder/: test_delete.py  test_update.py  test_where_in.py  test_where_not_equal.py
tests/test_db_hybrid/: test_where_equal.py  test_where_not_equal.py
tests/test_db_orm/: test_callbacks.py  test_find.py  test_poly_many_to_many.py  test_rel_one_to_many.py  test_rel_one_to_one.py  test_where_equal.py  test_where_in.py  test_where_like.py
tests/test_db_sa/: test_where_equal.py
tests/test_ioc/: test_overrides.py
tests/test_orm/: README.md  test_callbacks.py  test_find.py  test_rel_many_to_many.py  test_rel_one_to_many.py  test_rel_one_to_one.py  test_relations.py  test_where.py
tests/test_unit/test_support/: test_dictionary.py  test_dumper.py  test_hash.py  test_module.py  test_path.py  test_str.py
tests/test_x-last-api/: test_delete.py  x-disable-test_post.py
uvicore/: NOTES.md  __init__.py  configuration.py
uvicore/auth/: __init__.py  auth.py  services.py  user.py  user_info.py  userinfo.py
uvicore/cache/: manager.py  services.py
uvicore/concurrency/: __init__.py
uvicore/configuration/: __init__.py  config.py  configuration.py  env.py  services.py
uvicore/console/: __init__.py  click_colors.py  console.py  decorators.py  provider.py  services.py
uvicore/container/: __init__.py  ioc.py
uvicore/contracts/: __init__.py  application.py  authenticator.py  auto_api.py  builder.py  cache.py  config.py  connection.py  database.py  dispatcher.py  email.py  event.py  field.py  ioc.py  job.py  job_dispatcher.py  logger.py  mapper.py  model.py  package.py  provider.py  relation.py  router.py  routes-OLD.py  routes.py  server.py  template.py  user.py  user_info.py  user_provider.py  userinfo.py
uvicore/database/: OLD-__init__.py  __init__.py  bootstrap.py  builder.py  connection.py  db.py  db_OLD.py  db_OLD2.py  db_async.py  provider.py  query.py  services.py  sync.py  table.py
uvicore/events/: __init__.py  dispatcher.py  event.py  handler.py
uvicore/exceptions/: __init__.py
uvicore/factories/: __init__.py  logger.py
uvicore/foundation/: __init__.py  application.py  cli.py  ioc.py  package.py  providers.py  services.py
uvicore/http/: __init__.py  bootstrap.py  exceptions.py  params.py  provider.py  request.py  response.py  server.py  services.py  static.py  templates.py
uvicore/http_client/: services.py
uvicore/jobs/: __init__.py  dispatcher.py  job.py  results.py
uvicore/logging/: logger.py  services.py
uvicore/mail/: __init__.py  services.py
uvicore/orm/: __init__.py  field.py  fields.py  mapper.py  metaclass.py  model.py  model_OLD_before_meta.py  model_async.py  query.py  query_ORIG.py  services.py
uvicore/package/: __init__.py  package.py  packageOLD.py  provider.py
uvicore/redis/: __init__.py  bootstrap.py  provider.py  redis.py  services.py
uvicore/support/: README.md  __init__.py  classes.py  click.py  collection.py  concurrency.py  dictionary.py  dumper.py  hash.py  logger.py  module.py  path.py  printer.py  provider.py  schematic.py  singleton.py  str.py
uvicore/templating/: engine.py
uvicore/typing/: __init__.py  dictionary.py
(+268 files in other folders)
