[tool.poetry]
name = "uvicore"
version = "0.2.6"
license = "MIT"
authors = ["Matthew Reschke <mail@mreschke.com>"]
description = "The Fullstack Async Web, API and CLI Python Framework"
readme = "README.md"
homepage = "https://github.com/uvicore/framework"
documentation = "https://github.com/uvicore/framework"
repository = "https://github.com/uvicore/framework"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
include = ["LICENSE"]


[tool.poetry.dependencies]
# These packages are mandatory and form the core of the uvicore distribution
# ------------------------------------------------------------------------------
python = ">=3.9,<4.0"
#anyio = "3.7.*"
anyio = "4.3.*"

#colored = "1.4.*"
colored = "2.2.*"

prettyprinter = "0.18.*"

#environs = "9.3.*"
environs = "10.3.*"

#argon2-cffi = "20.1.*"
argon2-cffi = "23.1.*"


#cryptography = "3.4.*"
cryptography = "42.0.*"

#aiohttp = "3.7.*"
aiohttp = "3.9.*"

#httpx = "0.19.*"
httpx = "0.26.*"


merge-args = "0.1.*"
# merge_args see also https://github.com/smarie/python-makefun

# Do not use asyncclick until a new version of 7.x is released that fixes call_on_close
# Instead, uvicore now includes the code of my patched asyncclick in console/asyncclick
#asyncclick = "7.1.*"
#asyncclick = {path = "../asyncclick", develop = true}
#uvicorn already installs click 7.1.2

# NOTICE if you goto 2.0+ you will get various errors as they changed
# all the internals.  Requires a refactor to make 2.0 work
# Including changing from pydantic.main import ModelMetaclass as PydanticMetaclass
# to from pydantic._internal._model_construction import ModelMetaclass as PydanticMetaclass
#pydantic = {version = "1.8.*", optional = true}
# This is NOT optional, because even our JobResults uses it, in the basic uvicore install.
pydantic = "1.10.*"





# Optional Dependencies for Database Connectivity
# ------------------------------------------------------------------------------
#sqlalchemy = {version = "1.3.*", optional = true}
sqlalchemy = {version = "1.4.*", optional = true}

#alembic = {version = "1.5.*", optional = true}
alembic = {version = "1.13.*", optional = true}

#databases = {version = "0.4.*", extras = ["postgresql", "mysql", "sqlite"], optional = true}
databases = {version = "0.8.*", extras = ["postgresql", "mysql", "sqlite"], optional = true}


# Optional Dependencies for Redis Connectivity
# ------------------------------------------------------------------------------
# aioredis 2.0 needs a full refactor of how Uvicore connects
# see https://aioredis.readthedocs.io/en/latest/migration/#connecting-to-redis
# For now I will stick with 1.3 until I can refactor.
#aioredis = {version = "2.0.*", optional = true}
aioredis = {version = "1.3.*", optional = true}


# Optional Dependencies for Web and API Serving
# ------------------------------------------------------------------------------
#fastapi = {version = "0.66.*", optional = true}  # fastapi 0.66.1 starlette 0.14.2
###fastapi = {version = "0.68.*", optional = true}  # fastapi 0.68.2 starlette 0.14.2
#fastapi = {version = "0.103.*", optional = true}  # fastapi 0.103.1 starlette 0.27.0
fastapi = {version = "0.109.*", optional = true}  # fastapi 0.109.2 starlette 0.36.3

#uvicorn = {version = "0.13.*", optional = true}
uvicorn = {version = "0.27.*", optional = true}

#gunicorn = {version = "20.0.*", optional = true}
gunicorn = {version = "21.2.*", optional = true}

#aiofiles = {version = "0.6.*", optional = true}
aiofiles = {version = "23.2.*", optional = true}

#Jinja2 = {version = "2.11.*", optional = true}
Jinja2 = {version = "3.1.*", optional = true}

#requests = {version = "2.25.*", optional = true}
requests = {version = "2.31.*", optional = true}

#itsdangerous = {version = "1.1.*", optional = true}
itsdangerous = {version = "2.1.*", optional = true}

#uvloop = {version = "0.16.*", optional = true}
uvloop = {version = "0.19.*", optional = true}

#httptools = {version = "0.1.*", optional = true}
httptools = {version = "0.6.*", optional = true}

python-multipart = {version = "0.0.*", optional = true}

#PyJWT = {version = "2.0.*", optional = true}
PyJWT = {version = "2.8.*", optional = true}


# Optional Dependencies for Themes
# ------------------------------------------------------------------------------
# mreschke-themes = {path = "../../mreschke/uvicore/themes", develop = true}


[tool.poetry.extras]
# Install dependency groups with poetry install --extras "database redis web themes"
database = [
    "sqlalchemy",
    "alembic",
    "databases",
]
redis = [
    "aioredis",
]
web = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "aiofiles",
    "Jinja2",
    "requests",
    "itsdangerous",
    "uvloop",
    "httptools",
    "python-multipart",
    "PyJWT"
]
#themes = [
#    'mreschke-themes'
#]


[tool.poetry.dev-dependencies]
# To skip uvicore dev dependencies use poetry install --no-dev --extras "database redis web themes"
#pytest = "6.2.*"
pytest = "8.0.*"

#pytest-cov = "2.11.*"
pytest-cov = "4.1.*"

# 0.19.* broke all tests with these type of errors
# AttributeError: 'NoneType' object has no attribute 'bind_from_decorator'
# 0.20.3 is the last version that works with pytest 6.2.*
#pytest-asyncio = "0.14.*"
pytest-asyncio = "0.18.*"

#black = "20.8b1"
black = "24.2"

# 8.18.1 is the last ipython that supports python 3.9
#ipython = "7.21.*"
ipython = "8.18.1"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
